--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -131,7 +131,7 @@
 </div>
 
 <div style="margin-bottom: 20px">
-    This is a template for a lightweight RESTful API using JAX-RS.
+    pizza is a template for a lightweight RESTful API using JAX-RS.
     The sample code is a call for getting the current time.
     To try it out use the example REST client below to send a <code>GET</code> request to <code>/services/time</code>.
     Then use Eclipse or the Command Line to deploy some changes.
